# industry-brain

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Makefile  README.md  start-demo.bat
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: registry.py
backend/api/agent_factory/: router.py
backend/api/catalyst/: router.py
backend/api/corrosion/: router.py
backend/api/device/: debug_logger.py  router.py
backend/api/evolution/: router.py
backend/api/evolution_offline/: router.py
backend/api/evolution_online/: router.py
backend/api/governance/: __init__.py  router.py
backend/api/knowledge/: router.py
backend/api/memory/: router.py
backend/api/model_gateway/: router.py
backend/api/multi_agent/: router.py
backend/api/observability/: router.py
backend/api/optimize/: router.py
backend/api/tools/: router.py
backend/config/: litellm_config.yaml  settings.py
backend/core/agent_factory/: __init__.py  registry.py
backend/core/memory/: __init__.py  session_memory.py
backend/core/multi_agent/: __init__.py  engine.py
backend/core/observability/: __init__.py  tracer.py
backend/engine/: asset_repo.py  evolution_service.py  safety_gate.py
backend/engine/data_quality/: __init__.py  policy.py  scorer.py
backend/engine/offline/: __init__.py  pipeline.py
backend/engine/online/: __init__.py  pipeline.py
backend/engine/scenario_config/: __init__.py
backend/foundation/knowledge/: graph.py  retrieval.py  standards.py
backend/foundation/tools/: api_connector.py  (+3 more)
backend/models/: base.py  database.py  init_db.py  schemas.py  tables.py
(+152 files in other folders)
