[project]
name = "industry-brain-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "langgraph>=0.3",
    "litellm>=1.60",
    "langchain-core>=0.3",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "neo4j>=5.27",
    "redis>=5.2",
    "pgvector>=0.3",
    "httpx>=0.28",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]
pipeline = [
    "scrapy>=2.12",
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/main.py", "*/migrations/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "data_pipeline"]
